// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> should render 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9.c9.c9.c9.c9 {
  -webkit-transition: animation:none;
  transition: animation:none;
}

.c12.c12.c12.c12.c12 {
  margin-left: 0px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c7.c7.c7.c7.c7 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8 {
  border-radius: 4px;
  width: 100%;
}

.c8.c8.c8.c8.c8:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

<div>
  <div
    class=""
    data-blade-component="textarea"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textarea-1-input-2"
          style="width: 100%; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <div
                class=""
                data-blade-component="base-box"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <p
                    class="c5"
                    data-blade-component="text"
                  >
                    Enter name
                  </p>
                  <div
                    class="c6"
                    data-blade-component="visually-hidden"
                  >
                    <p
                      class="c7"
                      data-blade-component="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c8 focus-ring-wrapper"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1 c9 c10 __blade-base-input-wrapper"
          data-blade-component="base-box"
        >
          <textarea
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c11"
            data-blade-component="styled-base-input"
            id="textarea-1-input-2"
            rows="2"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="c12"
      data-blade-component="base-box"
    >
      <div
        class="c13"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<TextArea /> should render large size 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9.c9.c9.c9.c9 {
  -webkit-transition: animation:none;
  transition: animation:none;
}

.c12.c12.c12.c12.c12 {
  margin-left: 0px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c14.c14.c14.c14.c14 {
  margin-top: 8px;
  margin-right: 2px;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c7.c7.c7.c7.c7 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8 {
  border-radius: 4px;
  width: 100%;
}

.c8.c8.c8.c8.c8:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

<div>
  <div
    class=""
    data-blade-component="textarea"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textarea-19-input-20"
          style="width: 100%; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <div
                class=""
                data-blade-component="base-box"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <p
                    class="c5"
                    data-blade-component="text"
                  >
                    Enter name
                  </p>
                  <div
                    class="c6"
                    data-blade-component="visually-hidden"
                  >
                    <p
                      class="c7"
                      data-blade-component="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c8 focus-ring-wrapper"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1 c9 c10 __blade-base-input-wrapper"
          data-blade-component="base-box"
        >
          <textarea
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c11"
            data-blade-component="styled-base-input"
            id="textarea-19-input-20"
            maxlength="100"
            rows="2"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="c12"
      data-blade-component="base-box"
    >
      <div
        class="c13"
        data-blade-component="base-box"
      >
        <div
          class="c14"
          data-blade-component="base-box"
        >
          <p
            class="c15"
            data-blade-component="text"
          >
            0
            /
            100
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> should set number of lines 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9.c9.c9.c9.c9 {
  -webkit-transition: animation:none;
  transition: animation:none;
}

.c12.c12.c12.c12.c12 {
  margin-left: 0px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c7.c7.c7.c7.c7 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8 {
  border-radius: 4px;
  width: 100%;
}

.c8.c8.c8.c8.c8:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

<div>
  <div
    class=""
    data-blade-component="textarea"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textarea-157-input-158"
          style="width: 100%; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <div
                class=""
                data-blade-component="base-box"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <p
                    class="c5"
                    data-blade-component="text"
                  >
                    Enter name
                  </p>
                  <div
                    class="c6"
                    data-blade-component="visually-hidden"
                  >
                    <p
                      class="c7"
                      data-blade-component="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c8 focus-ring-wrapper"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1 c9 c10 __blade-base-input-wrapper"
          data-blade-component="base-box"
        >
          <textarea
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c11"
            data-blade-component="styled-base-input"
            id="textarea-157-input-158"
            rows="3"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="c12"
      data-blade-component="base-box"
    >
      <div
        class="c13"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<TextArea /> should support adding data-analytics attribute to the textarea's container 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9.c9.c9.c9.c9 {
  -webkit-transition: animation:none;
  transition: animation:none;
}

.c12.c12.c12.c12.c12 {
  margin-left: 0px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c7.c7.c7.c7.c7 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c11.c11.c11.c11.c11::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8 {
  border-radius: 4px;
  width: 100%;
}

.c8.c8.c8.c8.c8:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

<div>
  <div
    class=""
    data-blade-component="textarea"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textarea-1033-input-1034"
          style="width: 100%; flex-shrink: 0; margin-right: 0px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <div
                class=""
                data-blade-component="base-box"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <p
                    class="c5"
                    data-blade-component="text"
                  >
                    Enter name
                  </p>
                  <div
                    class="c6"
                    data-blade-component="visually-hidden"
                  >
                    <p
                      class="c7"
                      data-blade-component="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c8 focus-ring-wrapper"
        data-blade-component="base-box"
      >
        <div
          class="AnimatedBaseInputWrapperweb__StyledAnimatedBaseInputWrapper-e1vobd-1 c9 c10 __blade-base-input-wrapper"
          data-blade-component="base-box"
        >
          <textarea
            aria-describedby=""
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c11"
            data-analytics-name="text-area"
            data-blade-component="styled-base-input"
            id="textarea-1033-input-1034"
            rows="2"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="c12"
      data-blade-component="base-box"
    >
      <div
        class="c13"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
